Manifest/manifest.yaml

# Namespace

apiVersion: v1
kind: Namespace
metadata:
  name: webapps

# Secret

apiVersion: v1
kind: Secret
metadata:
  name: mysql-secret
  namespace: webapps
type: Opaque

stringData:
  MYSQL_ROOT_PASSWORD: root123
  MYSQL_DATABASE: mydb

# EBS StorageClass

apiVersion: storage.k8s.io/v1
kind: StorageClass
metadata:
  name: ebs-sc

provisioner: ebs.csi.aws.com

volumeBindingMode: WaitForFirstConsumer

parameters:
  type: gp2
  fsType: ext4
reclaimPolicy: Retain
volumeBindingMode: WaitForFirstConsumer


# PersistentVolumeClaim


apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: mysql-pvc
  namespace: webapps

spec:
  accessModes:
    - ReadWriteOnce

  storageClassName: ebs-sc

  resources:
    requests:
      storage: 5Gi


# MySQL Deployment


apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: webapps

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql

    spec:
      containers:
        - name: mysql

          image: mysql:8

          ports:
            - containerPort: 3306

          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc


# MySQL Service

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: webapps

spec:
  selector:
    app: mysql

  ports:
    - port: 3306
      targetPort: 3306

  type: ClusterIP


# HPA


apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: mysql-hpa
  namespace: webapps

spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: mysql

  minReplicas: 1
  maxReplicas: 3

  metrics:
    - type: Resource

      resource:
        name: cpu

        target:
          type: Utilization
          averageUtilization: 70

# Ingress


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-ingress
  namespace: webapps

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
    - host: mysql.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: mysql-service

                port:
                  number: 3306
